Nav: Fix shift to the right when the scrollbar is visible

--- a/app/_components/Nav.module.css
+++ b/app/_components/Nav.module.css
@@ -1,7 +1,8 @@
 .header-container {
   position: fixed;
   top: 0;
-  width: 100vw;
+  background-color: white;
+  width: 100%; /* 100vw would include the scrollbar and shift the navbar to the right */
   z-index: 10;
   --navbar-logo-height: 80px;
   font-size: 14px;
@@ -21,7 +22,6 @@
 
 .header {
   width: 100%;
-  background-color: white;
   display: flex;
   justify-content: space-between;
 }
