--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 body {
